# sqlx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: sqlx.yml
examples/: README.md  x.py
examples/mysql/todos/: Cargo.toml
examples/postgres/axum-social-with-tests/: Cargo.toml
examples/postgres/axum-social-with-tests/src/: password.rs
examples/postgres/axum-social-with-tests/src/http/: mod.rs  user.rs
examples/postgres/chat/: Cargo.toml
examples/postgres/chat/src/: main.rs
examples/postgres/files/: Cargo.toml
examples/postgres/json/: Cargo.toml
examples/postgres/listen/: Cargo.toml
examples/postgres/mockable-todos/: Cargo.toml
examples/postgres/multi-database/: Cargo.toml  setup.py
examples/postgres/multi-database/accounts/: Cargo.toml  sqlx.toml
examples/postgres/multi-database/accounts/src/: lib.rs
examples/postgres/multi-database/payments/: Cargo.toml
examples/postgres/multi-database/src/: main.rs
examples/postgres/multi-tenant/: Cargo.toml  setup.py
examples/postgres/multi-tenant/accounts/: Cargo.toml  sqlx.toml
examples/postgres/multi-tenant/accounts/src/: lib.rs
examples/postgres/multi-tenant/payments/: Cargo.toml
examples/postgres/preferred-crates/: Cargo.toml
examples/postgres/preferred-crates/uses-rust-decimal/: Cargo.toml
examples/postgres/preferred-crates/uses-time/: Cargo.toml
examples/postgres/todos/: Cargo.toml
examples/postgres/transaction/: Cargo.toml
examples/sqlite/extension/: Cargo.toml
examples/sqlite/pool-configuration/: Cargo.toml
examples/sqlite/regexp/: Cargo.toml  build.rs  sqlx.toml
examples/sqlite/regexp/src/: main.rs
examples/sqlite/serialize/: Cargo.toml
examples/sqlite/todos/: Cargo.toml
examples/wasip2/: README.md
examples/wasip2/.cargo/: config.toml
examples/wasip2/mysql/: Cargo.toml
examples/wasip2/mysql/src/: main.rs
examples/wasip2/postgres/: Cargo.toml
examples/wasip2/postgres/src/: main.rs
sqlx-cli/: Cargo.toml  README.md
sqlx-cli/src/: database.rs  lib.rs  metadata.rs  opt.rs  prepare.rs
sqlx-core/: Cargo.toml
sqlx-core/src/: arguments.rs  column.rs  connection.rs  encode.rs  error.rs  executor.rs  fs.rs  instrument_stream.rs  lib.rs  logger.rs  query.rs  statement.rs  sync.rs  transaction.rs
sqlx-core/src/any/: arguments.rs  migrate.rs
sqlx-core/src/any/connection/: mod.rs
sqlx-core/src/config/: drivers.rs  migrate.rs  reference.toml  tests.rs
sqlx-core/src/migrate/: migration.rs  migration_type.rs  migrator.rs  source.rs
sqlx-core/src/net/: mod.rs
sqlx-core/src/net/socket/: async_rw_adapter.rs  mod.rs
sqlx-core/src/net/tls/: mod.rs  tls_native_tls.rs  tls_rustls.rs  tls_wasi.rs  util.rs  wasi-tls.wit
sqlx-core/src/pool/: connection.rs  inner.rs  mod.rs  options.rs
sqlx-core/src/rt/: mod.rs
sqlx-core/src/rt/rt_wasip3/: mod.rs
sqlx-core/src/testing/: mod.rs  pool.rs
sqlx-core/src/wasm/: fs.rs
sqlx-macros/: Cargo.toml
sqlx-macros-core/: Cargo.toml  clippy.toml
sqlx-macros-core/src/: lib.rs  migrate.rs  test_attr.rs
sqlx-macros-core/src/database/: impls.rs  mod.rs
sqlx-macros-core/src/query/: cache.rs  input.rs  metadata.rs  output.rs
sqlx-mssql/src/: migrate.rs
sqlx-mssql/src/connection/: executor.rs
sqlx-mysql/: Cargo.toml
sqlx-mysql/src/: any.rs  arguments.rs  transaction.rs
sqlx-mysql/src/connection/: auth.rs  establish.rs  executor.rs  mod.rs  stream.rs  text_query.rs  tls.rs
sqlx-mysql/src/options/: connect.rs  mod.rs  parse.rs
sqlx-mysql/src/protocol/response/: local_infile.rs  mod.rs
sqlx-mysql/src/testing/: mod.rs
sqlx-postgres/: Cargo.toml
sqlx-postgres/src/: any.rs  arguments.rs  bind_iter.rs  error.rs  listener.rs  transaction.rs
sqlx-postgres/src/connection/: describe.rs  establish.rs  executor.rs  gssapi.rs  mod.rs  resolve.rs  sasl.rs  stream.rs  tls.rs  worker.rs
sqlx-postgres/src/io/: buf_mut.rs
sqlx-postgres/src/message/: flush.rs  mod.rs  notification.rs  password.rs
sqlx-postgres/src/options/: connect.rs  doc.md  mod.rs  parse.rs  pgpass.rs
sqlx-postgres/src/testing/: mod.rs
sqlx-postgres/src/types/: cube.rs  interval.rs  json.rs  record.rs
sqlx-postgres/src/types/geometry/: path.rs  polygon.rs
sqlx-sqlite/: Cargo.toml
sqlx-sqlite/src/: arguments.rs  logger.rs  regexp.rs  rw_pool.rs
sqlx-sqlite/src/connection/: collation.rs  describe.rs  execute.rs  explain.rs  handle.rs  intmap.rs  worker.rs
sqlx-sqlite/src/options/: mod.rs  parse.rs
sqlx-sqlite/src/statement/: handle.rs
sqlx-sqlite/src/types/: chrono.rs  time.rs
sqlx-test/: Cargo.toml
src/: lib.rs
src/macros/: mod.rs  test.md
test_sqlx_validation/: PR_DESCRIPTION.md  test_insert_validation.sql  test_parsing.rs
tests/: docker-compose.yml
tests/any/: any.rs  pool.rs
tests/mssql/: migrate.rs  mssql.rs
tests/mysql/: any.rs  describe.rs  macros.rs  migrate.rs  mysql.rs  wasi_integration_test.rs
tests/mysql/wasm-components/connect-test/: Cargo.toml
tests/mysql/wasm-components/execute-query-test/: Cargo.toml
tests/mysql/wasm-components/pool-crud-test/: Cargo.toml
tests/mysql/wasm-components/prepared-query-test/: Cargo.toml
tests/mysql/wasm-components/tls-connect-test/: Cargo.toml
tests/mysql/wasm-components/tls-connect-test/src/: lib.rs
tests/postgres/: any.rs  derives.rs  describe.rs  migrate.rs  pool.rs  postgres.rs  setup.sql  types.rs  wasi_integration_test.rs
tests/postgres/wasm-components/postgres-connect-test/: Cargo.toml
tests/postgres/wasm-components/postgres-connect-test/src/: lib.rs
tests/postgres/wasm-components/postgres-execute-query-test/: Cargo.toml
tests/postgres/wasm-components/postgres-pool-crud-test/: Cargo.toml
tests/postgres/wasm-components/postgres-prepared-query-test/: Cargo.toml
tests/postgres/wasm-components/postgres-tls-connect-test/: Cargo.toml
tests/postgres/wasm-components/postgres-tls-connect-test/src/: lib.rs
tests/sqlite/: any.rs  derives.rs  describe.rs  macros.rs  migrate.rs  setup.sql  sqlcipher.rs  sqlite.db  sqlite.rs
(+3 files in other folders)
