[package]
name = "sqlx-example-mysql-todos"
version = "0.1.0"
edition = "2021"
workspace = "../../../"

[dependencies]
anyhow = "1.0"
sqlx = { path = "../../../", package = "flyer-sqlx", features = [ "mysql", "runtime-tokio", "tls-native-tls" ] }
#sqlx = { path = "../../../", package = "flyer-sqlx", features = [ "mysql", "mysql-rsa", "runtime-tokio", "tls-native-tls" ] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
