[package]
name = "sqlx-example-postgres-transaction"
version = "0.1.0"
edition = "2021"
workspace = "../../../"

[dependencies]
sqlx = { path = "../../../", package = "flyer-sqlx", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"]}
