[package]
name = "sqlx-example-sqlite-todos"
version = "0.1.0"
edition = "2018"
workspace = "../../../"

[dependencies]
anyhow = "1.0.58"
sqlx = { path = "../../../", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.25.0", features = ["rt", "macros"]}
