# Standalone example: SQLx + MySQL connection pool on `wasm32-wasip2`.
#
# Detached from the main workspace (note the empty `[workspace]` table) so it
# can pin the exact feature set used for WASI without being unified with the
# rest of the workspace's features.
[package]
name = "sqlx-example-wasip2-mysql"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "sqlx-wasip2-mysql"
path = "src/main.rs"

[dependencies]
# `mysql-rsa` enables the public-key password exchange MySQL 8 uses for
# `caching_sha2_password` over a plaintext connection.
sqlx = { path = "../../..", default-features = false, features = ["mysql", "mysql-rsa", "runtime-tokio"] }

# A current-thread Tokio runtime to drive the pool. On wasm32-wasip2 Tokio's
# `net` driver works under `--cfg tokio_unstable`
tokio = { version = "1", default-features = false, features = ["rt", "net", "time", "macros"] }
