[package]
name = "sqlx-example-postgres-multi-database-accounts"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true, features = ["postgres", "time", "uuid", "macros", "sqlx-toml"] }
tokio = { version = "1.25.0", features = ["rt", "sync"] }

argon2 = { version = "0.5.3", features = ["password-hash"] }
password-hash = { version = "0.6.1", features = ["alloc"] }

uuid = { version = "1.12.1", features = ["serde"] }
thiserror = "2.0.18"
rand = "0.10.1"

time = { version = "0.3.47", features = ["serde"] }

serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio"] }
