[package]
name = "sqlx-example-postgres-preferred-crates-uses-time"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
serde = "1"
time = "0.3"
uuid = "1"

# NEW ADD`S
sqlx = { path = "../../../../", package = "flyer-sqlx", features = ["runtime-tokio", "postgres", "time", "json", "uuid"] }

#[dependencies.sqlx]
#workspace = true
#features = ["runtime-tokio", "postgres", "time", "json", "uuid"]

[lints]
workspace = true
