[package]
name = "postgres-tls-connect-test"
version = "0.1.0"
edition = "2021"
workspace = "../../../../"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
sqlx = { path = "../../../../", features = ["postgres", "runtime-tokio", "tls-wasm"] }
tokio = { version = "1.20.0", features = ["rt"] }
wasip3 = "0.5.0"
